--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,22 @@ jobs:
       - uses: actions/checkout@v3
 
       - uses: ./.github/actions/setup-and-cache
-      - uses: ./.github/actions/create-env-and-build
+
+      - name: Create .env
+        run: |
+          touch .env
+          echo DATABASE_URL=${{ secrets.DATABASE_URL }} >> .env
+          echo SOUND_DIR=${{ secrets.SOUND_DIR }} >> .env
+          echo GOOGLE_PROJECT_ID=${{ secrets.GOOGLE_PROJECT_ID }} >> .env
+          echo GOOGLE_LOCATION=${{ secrets.GOOGLE_LOCATION }} >> .env
+          echo MICROSOFT_SPEECH_KEY=${{ secrets.MICROSOFT_SPEECH_KEY }} >> .env
+          echo DEEPL_AUTH_KEY=${{ secrets.DEEPL_AUTH_KEY }} >> .env
+          echo GMAIL_USER=${{ secrets.GMAIL_USER }} >> .env
+          echo GMAIL_PASS=${{ secrets.GMAIL_PASS }} >> .env
+
+      - name: Build
+        shell: bash
+        run: npm run build
 
       - name: Lint Check
         run: npm run lint
@@ -72,7 +87,21 @@ jobs:
       - uses: ./.github/actions/prisma
         # run: npx playwright install --with-deps
 
-      - uses: ./.github/actions/create-env-and-build
+      - name: Create .env
+        run: |
+          touch .env
+          echo DATABASE_URL=${{ secrets.DATABASE_URL }} >> .env
+          echo SOUND_DIR=${{ secrets.SOUND_DIR }} >> .env
+          echo GOOGLE_PROJECT_ID=${{ secrets.GOOGLE_PROJECT_ID }} >> .env
+          echo GOOGLE_LOCATION=${{ secrets.GOOGLE_LOCATION }} >> .env
+          echo MICROSOFT_SPEECH_KEY=${{ secrets.MICROSOFT_SPEECH_KEY }} >> .env
+          echo DEEPL_AUTH_KEY=${{ secrets.DEEPL_AUTH_KEY }} >> .env
+          echo GMAIL_USER=${{ secrets.GMAIL_USER }} >> .env
+          echo GMAIL_PASS=${{ secrets.GMAIL_PASS }} >> .env
+
+      - name: Build
+        shell: bash
+        run: npm run build
 
       - name: Vitest Test
         run: npm run test:ci
