--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"@types/dom-speech-recognition": "^0.0.1",
 		"@types/express": "^4.17.17",
 		"@types/imap-simple": "^4.2.5",
+		"@types/markdown-it-link-attributes": "^3.0.1",
 		"@types/morgan": "^1.9.4",
 		"@types/nodemailer": "^6.4.7",
 		"@types/nprogress": "^0.2.0",
@@ -77,6 +78,8 @@
 		"@socket.io/sticky": "^1.0.3",
 		"deepl-node": "^1.8.0",
 		"express": "^4.18.2",
+		"gray-matter": "^4.0.3",
+		"markdown-it-link-attributes": "^4.0.1",
 		"microsoft-cognitiveservices-speech-sdk": "^1.26.0",
 		"morgan": "^1.10.0",
 		"nodemailer": "^6.9.1",
