--- a/package.json
+++ b/package.json
@@ -30,11 +30,13 @@
 		"@sveltejs/kit": "^1.15.2",
 		"@types/dom-speech-recognition": "^0.0.1",
 		"@types/express": "^4.17.17",
+		"@types/glob": "^8.1.0",
 		"@types/imap-simple": "^4.2.5",
 		"@types/markdown-it-link-attributes": "^3.0.1",
 		"@types/morgan": "^1.9.4",
 		"@types/nodemailer": "^6.4.7",
 		"@types/nprogress": "^0.2.0",
+		"@types/prettier": "^2.7.2",
 		"@types/redis": "^4.0.11",
 		"@types/uuid": "^9.0.1",
 		"@typescript-eslint/eslint-plugin": "^5.57.0",
@@ -78,6 +80,8 @@
 		"@socket.io/sticky": "^1.0.3",
 		"deepl-node": "^1.8.0",
 		"express": "^4.18.2",
+		"fuse.js": "^6.6.2",
+		"glob": "^10.2.2",
 		"gray-matter": "^4.0.3",
 		"markdown-it-link-attributes": "^4.0.1",
 		"microsoft-cognitiveservices-speech-sdk": "^1.26.0",
