--- a/package.json
+++ b/package.json
@@ -81,11 +81,11 @@
 		"@socket.io/sticky": "^1.0.3",
 		"deepl-node": "^1.8.0",
 		"express": "^4.18.2",
-		"fuse.js": "^6.6.2",
 		"glob": "^10.2.2",
 		"gray-matter": "^4.0.3",
 		"markdown-it-link-attributes": "^4.0.1",
 		"microsoft-cognitiveservices-speech-sdk": "^1.26.0",
+		"minisearch": "^6.0.1",
 		"morgan": "^1.10.0",
 		"nodemailer": "^6.9.1",
 		"nprogress": "^0.2.0",
