--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"@types/express": "^4.17.17",
 		"@types/glob": "^8.1.0",
 		"@types/imap-simple": "^4.2.5",
+		"@types/jsdom": "^21.1.1",
 		"@types/markdown-it-link-attributes": "^3.0.1",
 		"@types/morgan": "^1.9.4",
 		"@types/nodemailer": "^6.4.7",
@@ -84,6 +85,7 @@
 		"fuse.js": "^6.6.2",
 		"glob": "^10.2.2",
 		"gray-matter": "^4.0.3",
+		"jsdom": "^21.1.1",
 		"markdown-it-link-attributes": "^4.0.1",
 		"microsoft-cognitiveservices-speech-sdk": "^1.26.0",
 		"morgan": "^1.10.0",
