--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"@types/nprogress": "^0.2.0",
 		"@types/prettier": "^2.7.2",
 		"@types/redis": "^4.0.11",
+		"@types/remove-markdown": "^0.3.1",
 		"@types/uuid": "^9.0.1",
 		"@typescript-eslint/eslint-plugin": "^5.59.1",
 		"@typescript-eslint/parser": "^5.59.1",
@@ -57,6 +58,7 @@
 		"prettier": "^2.8.8",
 		"prettier-plugin-svelte": "^2.10.0",
 		"prisma": "^4.13.0",
+		"remove-markdown": "^0.5.0",
 		"stylelint": "^15.6.0",
 		"stylelint-config-standard": "^33.0.0",
 		"stylelint-config-standard-scss": "^9.0.0",
