--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,8 +22,10 @@
 		"exactOptionalPropertyTypes": true,
 		"noImplicitOverride": true,
 		"noImplicitReturns": true,
-		"noFallthroughCasesInSwitch": true
+		"noFallthroughCasesInSwitch": true,
 		// "noUncheckedIndexedAccess": true,
+
+		"types": ["vitest/importMeta"]
 	}
 	// Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
 	//
