--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
 		"@socket.io/sticky": "^1.0.3",
 		"@types/highlight.js": "^10.1.0",
 		"@types/markdown-it": "^12.2.3",
+		"country-flag-emoji-polyfill": "^0.1.4",
 		"deepl-node": "^1.9.0",
 		"express": "^4.18.2",
 		"fuse.js": "^6.6.2",
